--- a/app/views/payement_transfers/index.html.erb
+++ b/app/views/payement_transfers/index.html.erb
@@ -4,6 +4,7 @@
 <th>Sr No.</th>
 <th>Booking Date</th>
 <th>Booking Area/Sq.Ft</th>
+<th>Price</th>
 <th>Lister's Name</th>
 <th>Address</th>
 <th>Pick up Date</th>
