Booking page on admin side updated

--- a/app/views/payement_transfers/index.html.erb
+++ b/app/views/payement_transfers/index.html.erb
@@ -15,6 +15,6 @@
 <th>Check Status</th>
 </tr>
 <% @bookings.each_with_index do |booking, index|%>
-  <%#= render 'result_payment', :index => index, :booking => booking %>
+  <%= render 'result_payment', :index => index, :booking => booking %>
 <%end%> 
 </table>
