--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -2,14 +2,14 @@
 
 <td><%= index + 1 %></td>
 <td><%= booking.created_at.to_date %></td>
-<td><%= booking.area %></td>
-<td><%= booking.price %></td>
+<td><%= booking.area rescue nil %></td>
+<td><%= booking.price rescue nil %></td>
 <td><%= booking.poster.name %></td>
 <td><%= booking.post.address %></td>
 
- <td><%= booking.dropoff_date.strftime("%d-%m-%Y")%> </td>
+ <td><%= booking.dropoff_date.strftime("%d-%m-%Y") rescue nil%> </td>
 
- <td><%= booking.pickup_date.strftime("%d-%m-%Y") %></td>
+ <td><%= booking.pickup_date.strftime("%d-%m-%Y") rescue nil%></td>
 
   
 <td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
