Booking page on admin side updated

--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -1,11 +1,11 @@
 <tr>
 
-<td><%= index + 1 %></td>
-<td><%= booking.created_at.to_date %></td>
+<td><%= index + 1 rescue nil%></td>
+<td><%= booking.created_at.to_date rescue nil%></td>
 <td><%= booking.area rescue nil %></td>
 <td><%= booking.price rescue nil %></td>
-<td><%= booking.poster.name %></td>
-<td><%= booking.post.address %></td>
+<td><%= booking.poster.name rescue nil%></td>
+<td><%= booking.post.address rescue nil%></td>
 
  <td><%= booking.dropoff_date.strftime("%d-%m-%Y") rescue nil%> </td>
 
@@ -17,14 +17,14 @@
   
 <td>
   <% unless booking.stripe_transfer_id.present? %>  
-  <%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) %>
+  <%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) rescue nil%>
   <% else %>
      -----
   <% end %>
 </td>  
 <td>
   <% if booking.status.present? && booking.status == "pending"%>
-    <%= link_to "Check Status",check_status_payement_transfers_path(:booking_id =>booking.id) %>
+    <%= link_to "Check Status",check_status_payement_transfers_path(:booking_id =>booking.id) rescue nil%>
   <% else %>
      -----  
   <% end %>
