--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -16,10 +16,14 @@
 <td><%= booking.status.camelize rescue nil %>
   
 <td>
+  <% if booking.is_cancel == true %>
+      <span>Cancelled</span>
+  <% else %>
   <% unless booking.stripe_transfer_id.present? %>  
   <%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) rescue nil%>
   <% else %>
      -----
+  <% end %>
   <% end %>
 </td>  
 <td>
