devise sign out issue resolved

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,9 +103,9 @@
                               <li><a href="javascript:void(0);">Support</a></li>
 
                               <% if controller.controller_name == 'users' %>
-                              <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                              <li><%= link_to 'Logout', sign_out_path, :method=>'delete' %></li>
                               <%else%>
-                              <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
+                              <li><%= link_to 'Logout', sign_out_path, :method=>'delete' %></li>
                               <%end%>
                             <% else %>
                              <% if controller.controller_name == 'about_us' %>
