--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -74,12 +74,12 @@
                             <% if booking.post.user.provider.present? && booking.post.user_id != current_user.id %>
                                 (<%= mutual_friend_list(booking.post.user.id) rescue nil%> mutual friends)<% end %>
                             <p>
-                            <%= booking.post.address%>
-                            <%= booking.post.street_add%>
-                            <%= booking.post.apt%><br>
-                            <%= booking.post.city%>
-                            <%= booking.post.state%>
-                            <%= booking.post.zip_code%>
+                            <%= booking.post.address rescue nil %>
+                            <%= booking.post.street_add rescue nil %>
+                            <%= booking.post.apt rescue nil%><br>
+                            <%= booking.post.city rescue nil %>
+                            <%= booking.post.state rescue nil %>
+                            <%= booking.post.zip_code rescue nil %>
                             </p>
                         </div>
                         
@@ -151,7 +151,7 @@
                         </p>
                         </div>
                         
-                  <div class="note"><span>Notes</span> : <%=booking.post.additional_comments rescue nil%>
+                  <div class="note"><span>Notes</span> : <%=booking.post.additional_comments rescue nil %>
                         </div>
                         
                         </div>
