--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 
-<%= render 'home_script' %>
+	<%= render 'home_script' %>
 
-<%#= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+<%#= javascript_include_tag "jquery.validate.min","validation" %>
 
 
  		<div id="image">
@@ -17,15 +17,13 @@
                   	<% unless user_signed_in? %>
                   	<div class="input-group">
                   		<form id="form" onsubmit="return validateForm()">
-                  		<%#= form_tag url_for(:controller => 'authenticates', :action => 'create'), :method => 'post', :id=>"userSignup", :remote=> true, :onsubmit => "return validateForm()" do |f| %>
 
-                         <%= text_field_tag :email, nil, :class=>"sign_up_id", :placeholder=>"@usd.edu email address" %>
-                         <span class="input-group-btn">
-                             <%= submit_tag "Sign Up", :class=>"btn_signup", :style=>"margin:-78px 0px 0px 601px;" %>
-                             <div class="form-error" style="margin-left: 414px;"></div>
-                             <p class="usc"><p style="color:#d3d4d5; margin:-14px 0 0 414px;font-family:brandon5; font-size:14px;" >Currently open to USC students only.</p></p>
-                        </span>
-                        <%# end %>
+                         	<%= text_field_tag :email, nil, :class=>"sign_up_id", :placeholder=>"@usd.edu email address" %>
+	                         <span class="input-group-btn">
+	                             <%= submit_tag "Sign Up", :class=>"btn_signup", :style=>"margin:-78px 0px 0px 601px;" %>
+	                             <div class="form-error" style="margin-left: 414px;"></div>
+	                             <p class="usc"><p style="color:#d3d4d5; margin:-14px 0 0 414px;font-family:brandon5; font-size:14px;" >Currently open to USC students only.</p></p>
+	                        </span>
                     	</form>
                     </div>
                     <% end %>
