--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -84,7 +84,72 @@
                         </div>
                         
                        
-                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : <%= booking.area %> sq. ft
+                        
+                        <p>
+                          
+                           <% if booking.is_cancel == true %>
+                              <span>Status</span> : Cancelled
+                            <% elsif booking.is_confirm == true %>
+                              <span>Status</span> : Confirmed booking
+                            <% else %>
+                              <span>Status</span> : Waiting for drop-off confirmation
+                            <% end %>
+                            
+                        </p>
+
+                        
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : <%= booking.dropoff_date.strftime("%B %d,%Y") %> 
+                        <p>
+                        <span>Booked drop-off</span> 
+                        <% if booking.dropoff_price != 0 %>
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
+                            <span class="tasks-list-mark"></span>
+                          </label>
+                            $<%= booking.dropoff_price %>
+                          <%else%>
+                            <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled">
+                            <span class="tasks-list-mark"></span>
+                            </label>
+                        <%end%>
+                        </p>
+                        <p>
+                        <a href="javascript:void(0);" class="booking-btn">Confirm drop-off</a>
+                        </p>
+
+                        
+
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : <%= booking.pickup_date.strftime("%B %d,%Y") %>
+                        <p>
+
+                        <span>Booked pick-up</span>
+                        <% if booking.pickup_price != 0 %>
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled" checked="checked">
+                            <span class="tasks-list-mark"></span>
+                          </label>
+                            $<%= booking.pickup_price %>
+                          <%else%>
+                          <label class="tasks-list-item">
+                            <input type="checkbox" class="tasks-list-cb" value="1" name="task_3" disabled="disabled">
+                            <span class="tasks-list-mark"></span>
+                          </label>
+                        <%end%>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        <p style="margin-top: 13px !important;"> 
+                          <%= link_to "View Post", booking_path(booking.id) %>
+                        </p>
+                        </p>
+                        </div>
                         
                         <div class="note"><span>Notes</span> : <%=booking.post.additional_comments rescue nil %>
                         </div>
