--- a/app/views/comments/_book_comment.html.erb
+++ b/app/views/comments/_book_comment.html.erb
@@ -2,7 +2,7 @@
             <ul>
               <% @comments.each do |comment| %>
                 <li>
-                    <p><%= comment.user.name rescue nil %></p>
+                    <p><%= comment.user_name rescue nil %></p>
                       <%= comment.comments %>
                     <span>
                       <%= comment.created_at.strftime("%B %Y") %>
