--- a/app/views/posts/_all_post.html.erb
+++ b/app/views/posts/_all_post.html.erb
@@ -10,7 +10,7 @@
         <% end %>
 
         <%= index+x+1 %>)
-         <%= post.user.email rescue nil%>
+         <%= post.user_email rescue nil%>
         <%= post.id %>
         <%= post.price_sq_ft %>
         <%= post.created_at.strftime("%d-%m-%Y") %>
