--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,7 @@
 
   <% @comments.each do |comment| %>
     <div class="new_para1" style="<%= cycle('float:left', 'float:right') %>" >
-      <p class="sed_h" style="text-align:justify;"><%= comment.user.name rescue nil %></p>
+      <p class="sed_h" style="text-align:justify;"><%= comment.user_name rescue nil %></p>
       <p class="sed1" style="text-align:justify;"><%= comment.comments %></p>
       <h4 class="bottom1"> <%= comment.created_at.strftime("%B %Y") %></h4>
       <div class="line"></div>
