changes suggested by rails best practise gem

--- a/app/views/home/search_post.xls.erb
+++ b/app/views/home/search_post.xls.erb
@@ -36,8 +36,8 @@
         <% end %>
         <td><%= index + x+1 %></td>
         <td><%= post.id %></td>
-        <td><%= post.user.name rescue nil%></td>
-        <td><%= post.user.last_name rescue nil%></td>
+        <td><%= post.user_name rescue nil%></td>
+        <td><%= post.user_last_name rescue nil%></td>
         <td><%= post.additional_comments%></td>
         <td><%= post.area %></td>
         <td></td>
