--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -27,9 +27,9 @@
         
             
 
-                 <div class="name-title"> <%= post.user.name.capitalize rescue nil%> <%= post.user.last_name[0,1] rescue nil %>  
+                 <div class="name-title"> <%= post.user_name.capitalize rescue nil%> <%= post.user_last_name[0,1] rescue nil %>  
           <span style="font-size:10px; color:#999;"> 
-            <% if current_user.provider.present? &&  post.user.provider.present? && post.user_id != current_user.id %>(<%= mutual_friend_list(post.user.id) rescue nil%> mutual friends)
+            <% if current_user.provider.present? &&  post.user_provider.present? && post.user_id != current_user.id %>(<%= mutual_friend_list(post.user.id) rescue nil%> mutual friends)
             <% end %>
           </span>
            <div class="month"> <%= post.drop_off_avaibility_start_date.strftime("%B %e") %> -  <%= post.drop_off_avaibility_end_date.strftime("%B %e") %> 
