--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
               <% if user_signed_in? %>
                 <p style="margin:40px 0 0px 900px;">
                   <%= current_user.name rescue nil %> <%= current_user.last_name rescue nil %> 
-                  
+                  <%= link_to("<span>#{current_user.check_message rescue nil}</span>".html_safe, {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post},:style=>"background: none repeat scroll 0 0 #ff7e00; border-radius: 100%; 
+                    color: #fff; display: inline-block; font-size: 10px; height: auto; margin-left: 1px; padding: 3px; text-align: center; width: 20px;" )%>
                 </p>
               <% else %>
               <p style="margin:40px 0 0px 900px;">
@@ -101,7 +102,7 @@
                                 </li>
                               <%end%>
 
-                              <li><a href="javascript:void(0);">Support</a></li>
+                              <li><%= link_to "Support",frequently_asked_question_path%></li>
 
                               <% if controller.controller_name == 'users' %>
                               <li><%= link_to 'Logout', sign_out_path, :method=>'delete' %></li>
@@ -118,7 +119,7 @@
                                   <%= link_to "About Us", {:controller=>"/about_us", :action=>"about"} %>
                                 </li>
                               <%end%>
-                             <li><a href="javascript:void(0);">Support</a></li>     
+                             <li><%= link_to "Support",frequently_asked_question_path%></li>     
                             <% end %>
                         </ul>
                       </div>
