--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,7 @@
                     </li>
 
                     <li>
-                    <%= link_to "Bank Details",bank_details_path %>
+                    <%= link_to "Bank Details",new_bank_detail_path %>
                     </li>
 
                     <li>
