--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.id == @post.user_id%>
-<%= render 'form' %>
+<%= render 'form' ,:post => @post %>
 <%else%>
 "You are not authorized to edit this page"
 <%end%>
