--- a/app/views/about_us/edit.html.erb
+++ b/app/views/about_us/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing about_u</h1>
 
-<%= render 'form' %>
+<%= render 'form' ,:about_u => @about_u%>
 
 <%= link_to 'Show', @about_u %> |
 <%= link_to 'Back', about_us_path %>
