--- a/app/views/home/all_postings.html.erb
+++ b/app/views/home/all_postings.html.erb
@@ -55,7 +55,7 @@ To Date :
         <% end %>
         <td><%= index + x+1 %></td>
         <td><%= post.id %></td>
-        <td><%= User.find(post.user_id).name rescue nil%>&nbsp;<%= User.find(post.user_id).last_name rescue nil%></td>
+        <td><%= post.user_name rescue nil%>&nbsp;<%= post.user_last_name rescue nil%></td>
         <td><%= post.created_at.strftime("%d-%m-%Y") %></td> 
         <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
          <% if post.status == true %>
