--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -1,7 +1,7 @@
 
 
 
-    <% @posts.each_with_index do |post, index| %>
+    <% posts.each_with_index do |post, index| %>
     <% if params[:page].nil? || params[:page] == "0" || params[:page] == "1" %>
       <% x = 0 %>
     <% else %>
