--- a/app/views/faqs/edit.html.erb
+++ b/app/views/faqs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing faq</h1>
 
-<%= render 'form' %>
+<%= render 'form',:faq => @faq %>
 
 <%= link_to 'Show', @faq %> |
 <%= link_to 'Back', faqs_path %>
