added links in home page and redirect links in bank details

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -99,9 +99,9 @@
             </div>
                
               <div class="left" style="width:200px;float:left;">
-                <ul>  <li><a href="javascript:void(0);">Refund policy</a></li>
+                <ul>  <li><%= link_to "Refund policy",frequently_asked_question_path%></a></li>
 
-                  <li><a href="javascript:void(0);">Privacy & Terms</a></li>
+                  <li><%= link_to "Privacy & Terms",frequently_asked_question_path%></li>
                   <li><%=link_to "Support",frequently_asked_question_path%></li>
                 </ul>
               </div>
