Payment module - admin side

--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -2,11 +2,10 @@
 
 <td><%= index + 1 %></td>
 <td><%= booking.id %></td>
-<td><%= booking.created_at.to_date rescue nil%></td>
 <td><%= booking.area rescue nil %></td>
+<td>$<%= booking.cut_off_price.to_i rescue nil %></td>
 <td>$<%= booking.price.to_i rescue nil %></td>
-<td><%= booking.poster.name rescue nil%></td>
-<td><%= booking.user.name rescue nil %></td>
+<td>$<%= booking.commission.to_i %></td>
 <td><%= booking.post.address rescue nil%></td>
 <td><%= booking.status.camelize rescue nil %>
   
