--- a/app/views/payement_transfers/index.html.erb
+++ b/app/views/payement_transfers/index.html.erb
@@ -3,11 +3,10 @@
 <tr>
 <th>Sr No.</th>
 <th>Booking ID</th>
-<th>Booking Date</th>
 <th>Booking Area/Sq.Ft</th>
+<th>Payment Received by Poster</th>
 <th>Payment Done by Finder</th>
-<th>Poster Name</th>
-<th>Finder Name</th>
+<th>Commission</th>
 <th>Address</th>
 <th>Transfer Status</th>
 <th>Money Transfer</th>
