--- a/app/views/payement_transfers/search_payments.html.erb
+++ b/app/views/payement_transfers/search_payments.html.erb
@@ -11,9 +11,8 @@
 	<th>Booking ID</th>
 	<th>Booking Date</th>
 	<th>Booking Area/Sq.Ft</th>
+	<th>Payment Received by Poster</th>
 	<th>Payment Done by Finder</th>
-	<th>Poster Name</th>
-	<th>Finder Name</th>
 	<th>Address</th>
 	<th>Transfer Status</th>
 	<th>Money Transfer</th>
