--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
                   
                       
                   <div class="clear"></div> 
-                 <div class="learn_more"> <a href="#work"><p style="margin:-40px 0 60px 480px; color:#dbdddf;">Learn more</p></a>.
+                 <div class="learn_more"> <a href="#work" id="myAnchor2"><p style="margin:-40px 0 60px 480px; color:#dbdddf;">Learn more</p></a>.
                  
                      <a href="#myAnchor" id="myAnchor"> <img src="/assets/down_arrow1.png"></a> </div> 
                       
