--- a/app/views/faqs/frequently_asked_question.html.erb
+++ b/app/views/faqs/frequently_asked_question.html.erb
@@ -1,5 +1,5 @@
 <%#= stylesheet_link_tag   "bootstrap.min.css"%>
-<%= javascript_include_tag "ddaccordion.js", "jquery.min.js" %>
+<%= javascript_include_tag "ddaccordion.js" %>
 
 <script type="text/javascript">
 //Initialize 2nd demo:
