--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -199,7 +199,7 @@
 				</ul>
      </div>
      <div class="btn_more">
-               <a href="javascript:void(0)">  Learn more </a>
+                 <%= link_to "Learn more", frequently_asked_question_path%> </a>
                </div>
 
    
