--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -165,9 +165,9 @@ $('.masterTooltip').hover(function(){
                             
                             <div class="post-bg-row">
                             <ul class="field-list">
-                            <li><label>Address</label> 
+                            <!-- <li><label>Address</label> 
                               <%= f.text_field :address,"maxlength"=>"40", :class => "small" %>
-                            </li>
+                            </li> -->
                             <li><label>Street address</label> 
                               <%= f.text_field :street_add,"maxlength"=>"30", :class => "small" %>
                             </li>
