--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,7 +3,7 @@
 	         
 	            <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
 	            <li><%= link_to "Change Password", edit_user_registration_path %></li>
-	            <li><%= link_to "Bank Details",new_bank_detail_path %></li>
+	            <li><%= link_to "Bank Details",bank_details_path %></li>
 	            <li><%= link_to "My Post",posts_path%></li>
 	            <li><%= link_to "My Order/Received",order_receives_path%></li>
 	            <li><%= link_to "My Booking", bookings_path%></li>
