--- a/app/views/bank_details/index.html.erb
+++ b/app/views/bank_details/index.html.erb
@@ -1,26 +1,48 @@
-<h4>Bank Details</h4>
+<div class="main-new">
+    <ul class="verticle-menu">
+    <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
+    <li><%= link_to "Change Password", edit_user_registration_path %></li>
+    <li class="active"><%= link_to "Bank Details",bank_details_path %></li>
+    <li><%= link_to "My Post",posts_path%></li>
+    <li><%= link_to "My Order/Received",order_receives_path%></li>
+    <li><%= link_to "My Booking", bookings_path%></li>
+    <li><%= link_to "Payment", payments_path%></li>
+    <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
+    </ul>
+    
+    <div class="right-side">
+      
+        
+        <div class="payment-wrap">
+        <%unless @bank_detail.present?%>
+          <div class="new-add-post"><%= link_to '+Add Bank Details', new_bank_detail_path %> </div>
+        <%end%>
+            <% @bank_details.each do |bank_detail| %>
+            <div class="order-box">
+                <div class="pay-col pay-col1">
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Full name</th>
-      <th>Card number</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+                    
 
-  <tbody>
-    <% @bank_details.each do |bank_detail| %>
-      <tr>
-        <td><%= bank_detail.full_name %></td>
-        <td>******<%= bank_detail.card_number[-4..-1] %></td>
-        <td><%= link_to 'Edit', edit_bank_detail_path(bank_detail) %></td>
-        <td><%= link_to 'Destroy', bank_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                </div>
+                
+                <div class="pay-col pay-col1">
+                  <span>Full name</span>: <%= bank_detail.full_name %>
+                </div>
+                
+                <div class="pay-col pay-col1">
+                  <span>Card number</span>: ******<%= bank_detail.card_number[-4..-1] %>
+                </div>
+                
+                <div class="pay-col pay-col1">
+                    <%if @bank_detail.present?%>
+                      <%= link_to 'Destroy', bank_detail, method: :delete, data: { confirm: 'Are you sure?' } %>
+                    <%else%>
+                      <%= link_to 'New Bank detail', new_bank_detail_path %>
+                    <%end%>
+                </div>
+            </div>
+            <%end%>
+        </div>
+    </div>
+</div>
 
-<br>
-
-<%= link_to 'New Bank detail', new_bank_detail_path %>
