--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,6 +1,5 @@
 
-<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation" %>
-
+<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation","facebox.js" %>
 <div class="wrapper">
 <div class="main">   
 <div class="main4">
